--- a/demo-projects/todo/package.json
+++ b/demo-projects/todo/package.json
@@ -14,7 +14,7 @@
     "start": "cross-env NODE_ENV=production keystone start"
   },
   "dependencies": {
-    "@keystonejs/adapter-mongoose": "^5.1.3",
+    "@keystonejs/adapter-knex": "^6.1.2",
     "@keystonejs/app-admin-ui": "^5.3.0",
     "@keystonejs/app-graphql": "^5.0.1",
     "@keystonejs/app-static": "^5.0.0",
